crates/cribo/tests/snapshots/execution_results@xfail_stickytape_import_from_as_value.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/xfail_stickytape_import_from_as_value/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Hello",
    stderr: "",
}
