crates/cribo/tests/snapshots/execution_results@xfail_stickytape_script_using_from_to_import_module.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/xfail_stickytape_script_using_from_to_import_module/main.py
---
ExecutionResults {
    status: Failed(
        1,
    ),
    stdout: "",
    stderr: "Traceback (most recent call last):\n  File \"<TMP>/bundled.py\", line 32, in <module>\n    from greetings import greeting\nModuleNotFoundError: No module named 'greetings'",
}
