crates/cribo/tests/snapshots/execution_results@xfail_stickytape_script_with_single_local_import.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/xfail_stickytape_script_with_single_local_import/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Hello",
    stderr: "",
}
